[tool:pytest]
addopts =
    -v
    --doctest-modules
    --cov iotlabsshcli
    --cov-report=term-missing --cov-report=term --cov-report=xml
testpaths = iotlabsshcli

[pylint]
disable=locally-disabled,star-args,bad-option-value,old-style-class
msg-template={path}:{line}: [{msg_id}({symbol}), {obj}] {msg}
reports=no

[pep8]
exclude = *.egg,.tox

[flake8]
ignore = C901
exclude = .tox,dist,doc,build,*.egg
max-complexity = 6

[metadata]
description-file = README.rst
